--- a/backend/cloudFormationTemplates/lambda-app.yaml
+++ b/backend/cloudFormationTemplates/lambda-app.yaml
@@ -31,7 +31,7 @@ Resources:
             yum install -y python3.8 git amazon-cloudwatch-agent
             cd /home/ec2-user
             git clone -b hybrid-backend-dev https://github.com/MrGurijala/music-streaming-app.git
-            cd music-streaming-app/backend
+            cd music-streaming-app
             python3.8 -m venv venv
             source venv/bin/activate
             pip install --upgrade pip
@@ -39,12 +39,13 @@ Resources:
             pip install -r backend/requirements.txt
             mkdir -p /var/log/fastapi
             venv/bin/gunicorn main:app \
-              -w 4 \
+              -w 2 \
               -k uvicorn.workers.UvicornWorker \
               --bind 0.0.0.0:8000 \
               --access-logfile /var/log/fastapi/access.log \
               --error-logfile /var/log/fastapi/error.log \
-              --timeout 60 --daemon
+              --timeout 60 \
+              --daemon
 
             # Write CloudWatch Agent config
             cat <<EOF > /opt/aws/amazon-cloudwatch-agent/bin/cloudwatch-config.json
@@ -113,6 +114,15 @@ Resources:
       DefaultActions:
         - Type: forward
           TargetGroupArn: !Ref ApplicationTargetGroup
+
+  EC2AllowPort8000FromALB:
+    Type: AWS::EC2::SecurityGroupIngress
+    Properties:
+      GroupId: !Ref SecurityGroupId # EC2's SG
+      IpProtocol: tcp
+      FromPort: 8000
+      ToPort: 8000
+      SourceSecurityGroupId: !Ref ALBSecurityGroup
 
   EC2AutoScalingGroup:
     Type: AWS::AutoScaling::AutoScalingGroup
