--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,7 +16,7 @@ idna==3.10
 jmespath==1.0.1
 mangum==0.19.0
 packaging==24.2
-passlib==1.7.4
+passlib>=1.7.4
 psycopg2-binary==2.9.10
 pyasn1==0.4.8
 pycparser==2.22
